starting table with attempt at search box

--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html lang="en-US">
 
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Team</title>
     <link rel="stylesheet" href="css/style.css">
-</head>
+  </head>
 
-<body>
-<script src="js/script.js"></script>
-</body>
+  <body>
+    <h1>
+      The Douchebags
+    </h1>
+    <table>
+      <tr>
+        <th>Player Name</th>
+        <th>G</th>
+        <th>A</th>
+        <th>Pts</th>
+      </tr>
+      <tr>
+        <td>
+          <form method="get" action=""> <input type="text" name="search" id="search" value="" /> <input type="submit" name="submit" value="Search" /> </form>
+        </td>
+      </tr>
+    </table>
+    <script src="js/script.js"></script>
+  </body>
 
 </html>
