--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
   <body>
     <h1>
-      The Douchebags
+      Boston
     </h1>
+    <form method="get" action=""> <input type="text" name="search" id="search" value="" /> <input type="submit" name="submit" value="Search" /> </form>
     <table>
       <tr>
         <th>Player Name</th>
@@ -20,9 +21,16 @@
         <th>Pts</th>
       </tr>
       <tr>
-        <td>
-          <form method="get" action=""> <input type="text" name="search" id="search" value="" /> <input type="submit" name="submit" value="Search" /> </form>
-        </td>
+      <td>Brad Marchad</td>
+      <td>
+        .34
+      </td>
+      <td>
+        .54
+      </td>
+      <td>
+        .65
+      </td>
       </tr>
     </table>
     <script src="js/script.js"></script>
