you need to put in the js and css when you're not working on jsfiddle lololol

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
+<link rel="stylesheet" type="text/css" href="css/style.css"/>
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />
 <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" />
 <h1>H2H Fantasy Tool</h1>
@@ -129,7 +131,7 @@
   </div>
 </div>
 
-
+<!--
 <div class="results">
   <div>
     <h2>Info</h2>
@@ -182,3 +184,4 @@
     </form>
   </div>
 </div>
+-->
