2 functions need completion, but it's an updated working code

--- a/index.html
+++ b/index.html
@@ -54,46 +54,46 @@
     <th>SHO</th>
   </tr>
   <tr id='trMyScore'>
-    <th id='myScore'></th>
-    <th id='myGames'></th>
-    <th id='myGoals'></th>
-    <th id='myAssists'></th>
-    <th id='myPoints'></th>
-    <th id='myPlusMinus'></th>
-    <th id='myPIM'></th>
-    <th id='myPPP'></th>
-    <th id='mySHP'></th>
-    <th id='myGWG'></th>
-    <th id='mySOG'></th>
-    <th id='myFW'></th>
-    <th id='myHIT'></th>
-    <th id='myBLK'></th>
-    <th id='myW'></th>
-    <th id='myGAA'></th>
-    <th id='mySV'></th>
-    <th id='mySV%'></th>
-    <th id='mySHO'></th>
+    <td id='myScore'>0</td>
+    <td id='myGames'>0</td>
+    <td id='myGoals'>0</td>
+    <td id='myAssists'>0</td>
+    <td id='myPoints'>0</td>
+    <td id='myPlusMinus'>0</td>
+    <td id='myPIM'>0</td>
+    <td id='myPPP'>0</td>
+    <td id='mySHP'>0</td>
+    <td id='myGWG'>0</td>
+    <td id='mySOG'>0</td>
+    <td id='myFW'>0</td>
+    <td id='myHIT'>0</td>
+    <td id='myBLK'>0</td>
+    <td id='myW'>0</td>
+    <td id='myGAA'>0</td>
+    <td id='mySV'>0</td>
+    <td id='mySV%'>0</td>
+    <td id='mySHO'>0</td>
   </tr>
   <tr id='trVSScore'>
-    <th id='vsScore'></th>
-    <th id='vsGames'></th>
-    <th id='vsGoals'></th>
-    <th id='vsAssists'></th>
-    <th id='vsPoints'></th>
-    <th id='vsPlusMinus'></th>
-    <th id='vsPIM'></th>
-    <th id='vsPPP'></th>
-    <th id='vsSHP'></th>
-    <th id='vsGWG'></th>
-    <th id='vsSOG'></th>
-    <th id='vsFW'></th>
-    <th id='vsHIT'></th>
-    <th id='vsBLK'></th>
-    <th id='vsW'></th>
-    <th id='vsGAA'></th>
-    <th id='vsSV'></th>
-    <th id='vsSV%'></th>
-    <th id='vsSHO'></th>
+    <td id='vsScore'></td>
+    <td id='vsGames'></td>
+    <td id='vsGoals'></td>
+    <td id='vsAssists'></td>
+    <td id='vsPoints'></td>
+    <td id='vsPlusMinus'></td>
+    <td id='vsPIM'></td>
+    <td id='vsPPP'></td>
+    <td id='vsSHP'></td>
+    <td id='vsGWG'></td>
+    <td id='vsSOG'></td>
+    <td id='vsFW'></td>
+    <td id='vsHIT'></td>
+    <td id='vsBLK'></td>
+    <td id='vsW'></td>
+    <td id='vsGAA'></td>
+    <td id='vsSV'></td>
+    <td id='vsSV%'></td>
+    <td id='vsSHO'></td>
   </tr>
 </table>
 <hr />
