updated data management, methods simplified

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   </div>
 
   <div>
-    <input type='button' id='btnAddMyPlayer' value='Add player to my team' onclick="addMyPlayer()">
-    <input type='button' id='btnAddVSPlayer' value='Add player to opposing team' onclick="addVSPlayer()">
+    <input type='button' id='btnAddMyPlayer' value='Add player to my team' onclick="addPlayer(0)">
+    <input type='button' id='btnAddVSPlayer' value='Add player to opposing team' onclick="addPlayer(1)">
   </div>
 </form>
 <hr />
