--- a/about.html
+++ b/about.html
@@ -23,13 +23,13 @@
   <div class="container-fluid">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" href="welcome.html">Home</a>
+        <a class="nav-link active" href="#">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="about.html">About</a>
+        <a class="nav-link" href="#">About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="h2hnhlfantasytool.html">H2H NHL Fantasy Tool</a>
+        <a class="nav-link" href="#">H2H NHL Fantasy Tool</a>
       </li>
     </ul>
   </div>
