--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <div class="container-fluid">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" href="welcome.html">Home</a>
+        <a class="nav-link active" href="index.html">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="about.html">About</a>
@@ -37,41 +37,18 @@
 
 <div class="container mt-5">
   <div class="row">
-    <div class="col-sm-4">
-      <h2>About Me</h2>
-      <h5>Photo of me:</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text about me in culpa qui officia deserunt mollit anim..</p>
-      <h3 class="mt-4">Some Links</h3>
-      <p>Lorem ipsum dolor sit ame.</p>
-      <ul class="nav nav-pills flex-column">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Active</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
-        </li>
-      </ul>
-      <hr class="d-sm-none">
-    </div>
     <div class="col-sm-8">
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Dec 7, 2020</h5>
+      <h2>Welcome</h2>
+      <h5>Welcome to my website</h5>
       <div class="fakeimg">Fake Image</div>
       <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      <p>This website (for now) will consist of a personal project space for continued software development learning.  For now, the only app available is the Head2Head NHL Fantasy Tool, described below.</p>
 
-      <h2 class="mt-5">TITLE HEADING</h2>
-      <h5>Title description, Sep 2, 2020</h5>
+      <h2 class="mt-5">Head2Head NHL Fantasy Tool</h2>
+      <h5>Web Application to help NHL Fantasy managers plan their weekly matchups.</h5>
       <div class="fakeimg">Fake Image</div>
       <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      <p>The Head2Head NHL Fantasy Tool is built specifically for NHL Fantasy managers that operate in the weekly head to head format.  It's purpose is to compare two rosters (yours and your opponent's) by using the per game season average of every player on the roster multiplied by the number of games players will play that week.  With that information, managers can see where they will lack significant performance and can make moves accordingly.</p>
     </div>
   </div>
 </div>
