website structure changes

--- a/index.html
+++ b/index.html
@@ -48,7 +48,12 @@
       <h5>Web Application to help NHL Fantasy managers plan their weekly matchups.</h5>
       <div class="fakeimg">Fake Image</div>
       <p>Some text..</p>
-      <p>The Head2Head NHL Fantasy Tool is built specifically for NHL Fantasy managers that operate in the weekly head to head format.  It's purpose is to compare two rosters (yours and your opponent's) by using the per game season average of every player on the roster multiplied by the number of games players will play that week.  With that information, managers can see where they will lack significant performance and can make moves accordingly.</p>
+      <p>The Head2Head NHL Fantasy Tool is built specifically for NHL Fantasy managers that operate in the weekly head to head format.  
+        It's purpose is to compare two rosters (yours and your opponent's) by using the per game season average of every player on the roster multiplied by the number of games players will play that week.  
+        With that information, managers can see where they will lack significant performance and can make moves accordingly.
+      </p>
+      <p>Currently, it's all front-end javascript logic.  The data is pulled directly from the NHL API and is modified to provide the intended analysis.</p>
+      <p>Eventually there will be a login so that you can save teams and cycle through your opponents.</p>
     </div>
   </div>
 </div>
