--- a/h2hnhlfantasytool.html
+++ b/h2hnhlfantasytool.html
@@ -14,6 +14,27 @@
   </style>
 </head>
 <body>
+
+<div class="p-5 bg-primary text-white text-center">
+  <h1>Head2Head NHL Fantasy Tool</h1>
+</div>
+
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+  <div class="container-fluid">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link active" href="index.html">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="about.html">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="h2hnhlfantasytool.html">H2H NHL Fantasy Tool</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+<div class="container mt-5">
 <link rel="stylesheet" type="text/css" href="css/style.css"/>
 <!--<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" />-->
 <!--<link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet" />-->
@@ -136,6 +157,7 @@
       </thead>
     </table>
   </div>
+</div>
 </div>
 
 <div class="mt-5 p-4 bg-dark text-white text-center">
