--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 </div>
 
 <div class="mt-5 p-4 bg-dark text-white text-center">
-  <p>Footer</p>
+  <p><small>&copy; Copyright 2022, Patrick Thebeau</small> </p>
 </div>
 
 </body>
