--- a/h2hnhlfantasytool.html
+++ b/h2hnhlfantasytool.html
@@ -161,7 +161,7 @@
 </div>
 
 <div class="mt-5 p-4 bg-dark text-white text-center">
-  <p>by Patrick Thebeau</p>
+  <p><small>&copy; Copyright 2022, Patrick Thebeau</small> </p>
 </div>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery/latest/jquery.min.js"></script>
 <script type="text/javascript" src="js/script.js"></script>
