--- a/index.html
+++ b/index.html
@@ -40,26 +40,25 @@
     <div class="col-sm-8">
       <h2>Welcome</h2>
       <h5>Welcome to my website</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
       <p>This website (for now) will consist of a personal project space for continued software development learning.  For now, the only app available is the Head2Head NHL Fantasy Tool, described below.</p>
 
-      <h2 class="mt-5">Head2Head NHL Fantasy Tool</h2>
+      <h2 class="mt-5"><a href="h2hnhlfantasytool.html">Head2Head NHL Fantasy Tool</a></h2>
       <h5>Web Application to help NHL Fantasy managers plan their weekly matchups.</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
+      <img src="https://as1.ftcdn.net/v2/jpg/02/55/17/52/1000_F_255175204_T7uK7UINsVwJyOB3S93GMmAZto7MRH5l.jpg" class="img-fluid">
+      <div class="col-sm-8">
       <p>The Head2Head NHL Fantasy Tool is built specifically for NHL Fantasy managers that operate in the weekly head to head format.  
         It's purpose is to compare two rosters (yours and your opponent's) by using the per game season average of every player on the roster multiplied by the number of games players will play that week.  
         With that information, managers can see where they will lack significant performance and can make moves accordingly.
       </p>
       <p>Currently, it's all front-end javascript logic.  The data is pulled directly from the NHL API and is modified to provide the intended analysis.</p>
       <p>Eventually there will be a login so that you can save teams and cycle through your opponents.</p>
+      </div>
     </div>
   </div>
 </div>
 
 <div class="mt-5 p-4 bg-dark text-white text-center">
-  <p>Footer</p>
+  <p><small>&copy; Copyright 2022, Patrick Thebeau</small> </p>
 </div>
 
 </body>
