--- a/index.html
+++ b/index.html
@@ -6,16 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-  <style>
-  .fakeimg {
-    height: 200px;
-    background: #aaa;
-  }
-  </style>
 </head>
 <body>
 
-<div class="p-5 bg-primary text-white text-center">
+<div class="p-5 bg-dark text-white text-center">
   <h1>Welcome</h1>
 </div>
 
@@ -39,10 +33,10 @@
   <div class="row">
     <div class="col-sm-8">
       <h2>Welcome</h2>
-      <h5>Welcome to my website</h5>
       <p>This website (for now) will consist of a personal project space for continued software development learning.  For now, the only app available is the Head2Head NHL Fantasy Tool, described below.</p>
 
-      <h2 class="mt-5"><a href="h2hnhlfantasytool.html">Head2Head NHL Fantasy Tool</a></h2>
+      <h2 class="mt-5">
+      <a href="h2hnhlfantasytool.html">Head2Head NHL Fantasy Tool</a></h2>
       <h5>Web Application to help NHL Fantasy managers plan their weekly matchups.</h5>
       <img src="https://as1.ftcdn.net/v2/jpg/02/55/17/52/1000_F_255175204_T7uK7UINsVwJyOB3S93GMmAZto7MRH5l.jpg" class="img-fluid">
       <div class="col-sm-8">
