--- a/h2hnhlfantasytool.html
+++ b/h2hnhlfantasytool.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Head2Head NHL Fantasy Tool</title>
+  <title>H2H NHL Fantasy Tool | thebeau.ca</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
