--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Welcome</title>
+  <title>Home | thebeau.ca</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -10,7 +10,7 @@
 <body>
 
 <div class="p-5 bg-dark text-white text-center">
-  <h1>Welcome</h1>
+  <h1>Welcome to thebeau.ca</h1>
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -32,7 +32,7 @@
 <div class="container mt-5">
   <div class="row">
     <div class="col-sm-8">
-      <h2>Welcome</h2>
+      <h2>General word</h2>
       <p>This website (for now) will consist of a personal project space for continued software development learning.  For now, the only app available is the Head2Head NHL Fantasy Tool, described below.</p>
 
       <h2 class="mt-5">
@@ -40,7 +40,8 @@
       <h5>Web Application to help NHL Fantasy managers plan their weekly matchups.</h5>
       <img src="https://as1.ftcdn.net/v2/jpg/02/55/17/52/1000_F_255175204_T7uK7UINsVwJyOB3S93GMmAZto7MRH5l.jpg" class="img-fluid">
       <div class="col-sm-8">
-      <p>The Head2Head NHL Fantasy Tool is built specifically for NHL Fantasy managers that operate in the weekly head to head format.  
+      <p>
+        The Head2Head NHL Fantasy Tool is built specifically for NHL Fantasy managers that operate in the weekly head to head format.  
         It's purpose is to compare two rosters (yours and your opponent's) by using the per game season average of every player on the roster multiplied by the number of games players will play that week.  
         With that information, managers can see where they will lack significant performance and can make moves accordingly.
       </p>
