sm change to index

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <div class="p-5 bg-dark text-white text-center">
-  <h1>Welcome to thebeau.ca</h1>
+  <h1>thebeau.ca</h1>
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
